--- a/src/frontend/components/App.css
+++ b/src/frontend/components/App.css
@@ -7,7 +7,7 @@
   text-align: center;
   color: white;
   font-family: myFirstFont;
-  font-size: 1.7rem;
+  font-size: 1.3rem;
 }
 
 body {
@@ -17,17 +17,6 @@ body {
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-.coinButton:hover {        
-  border-inline:5px solid white;
-  border-radius:90px;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -45,11 +34,14 @@ body {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-header {
+  font-size: 1rem;
+}
+
+.card-title {
+  font-size: 1.7rem;
+}
+
+.card-text {
+  font-size: 1.2rem;
 }
